k8s-app/staging/postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: rails-app
    tier: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
      tier: postgresql
  template:
    metadata:
      labels:
        app: rails-app
        tier: postgresql 
    spec:
      serviceAccountName: jenkins
      containers:
      - name: postgres
        image: postgres:12.1
        ports:
            - containerPort: 5432
        volumeMounts:
            - name: "postgresql-data"
              mountPath: "/var/lib/postgresql/data"
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: claim-postgresql
---

apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: rails-app
    tier: postgresql
  ports:
    - protocol: TCP
      port: 5432 # service port
      targetPort: 5432 # Pod port
