k8s-app/staging/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: rails-app
    tier: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
      tier: redis
  template:
    metadata:
      labels:
        app: rails-app
        tier: redis 
    spec:
      containers:
      - name: redis
        image: redis:5.0.7
        ports:
            - containerPort: 6379

        volumeMounts:
            - name: "redis-data"
              mountPath: "/var/lib/redis/data"
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: claim-redis
---

apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: rails-app
    tier: redis
  ports:
    - protocol: TCP
      port: 6379 # service port
      targetPort: 6379 # Pod port
