k8s-app/staging/rails-app.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-rails-app
  labels:
    app: rails-app
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
      tier: frontend
  template:
    metadata:
      labels:
        app: rails-app
        tier: frontend 
    spec:
      containers:
      - name: drkiq
        image: eslamgomaa/dockerizing-ruby-drkiq:latest
        imagePullPolicy: Always
        ports:
            - containerPort: 8010
        # command: ["/bin/sleep", "3600"]
        workingDir: /opt/app-data
        volumeMounts:
            - name: "rails-data"
              mountPath: /opt/app-data
      volumes:
        - name: rails-data
          # emptyDir: {}
          persistentVolumeClaim:
            claimName: claim-rails

---

apiVersion: v1
kind: Service
metadata:
  name: sample-rails-app
spec:
  selector:
    app: rails-app
    tier: frontend
  ports:
    - protocol: TCP
      port: 8010 # service port
      targetPort: 8010 # Pod port

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-rails-app
  # namespace: staging
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: staging-app.demo.devops-caffe.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-rails-app
          servicePort: 8010
